--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#title, #category, #description {
+  display: flex;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+main{
+  padding:20px;
+  display:flex;
+  min-height: 100vh;
+  margin-left:200px;
+  justify-content: flex-start;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.App-intro {
-  font-size: large;
+footer{
+  display: flex;
+  align-self: flex-end;
+  justify-content: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#list-container {
+  background-color: #f7f7f7;
+  min-height: 100vh;
+  width: 200px;
 }
