--- a/src/List.css
+++ b/src/List.css
@@ -16,3 +16,23 @@ ul.horizontal{
 
 ul.horizontal > li{
 }
+.thumb-container {
+    position: relative;
+    width: 100%;
+}
+  
+.overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+    transition: .3s ease;
+    background-color: white;
+  }
