--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 
 #title, #category, #description {
   display: flex;
+  padding: 12px;
+  justify-content: space-between;
 }
 
 main{
@@ -12,6 +14,7 @@ main{
   min-height: 100vh;
   margin-left:200px;
   justify-content: flex-start;
+  max-width: 500px;
 }
 form {
   display: flex;
@@ -21,9 +24,8 @@ form {
 
 footer{
   display: flex;
-  align-self: flex-end;
   justify-content: center;
-  width: 100%;
+  padding: 20px;
 }
 
 #list-container {
@@ -34,4 +36,10 @@ footer{
 
 #new-post-btn {
   position: fixed;
+  bottom: 25px;
+  right: 25px;
+}
+
+.input-container {
+  max-width: 400px;
 }
