--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
 }
-
+#main-container {
+  margin-top: 80px;
+  display: flex;
+}
 #title, #category, #description {
   display: flex;
   padding: 12px;
@@ -12,7 +16,6 @@ main{
   padding:20px;
   display:flex;
   min-height: 100vh;
-  margin-left:200px;
   justify-content: flex-start;
   max-width: 500px;
 }
