--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+body{
+  width:100%;
+}
 .App {
   text-align: center;
   display: flex;
+  width:100%;
 }
 #main-container {
   margin-top: 80px;
@@ -8,31 +12,24 @@
 }
 #title, #category, #description {
   display: flex;
-  padding: 12px;
+  padding: 15px;
   justify-content: space-between;
 }
-
-main{
-  padding:20px;
-  display:flex;
-  min-height: 100vh;
-  justify-content: flex-start;
+#inputfield-container{
+  margin-bottom: 20px;
 }
 form {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
 footer{
   display: flex;
-  justify-content: center;
   padding: 20px;
 }
 
 #list-container {
   background-color: #f7f7f7;
-  min-height: 100vh;
   width: 200px;
 }
 
@@ -41,8 +38,4 @@ footer{
   bottom: 25px;
   right: 25px;
   z-index: 1;
-}
-
-.input-container {
-  max-width: 400px;
 }
